gateway/gateway-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: sisox
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: lukasz/haproxy-auth-gateway:2.0.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: iss-cert
          mountPath: /etc/certs
        - name: haproxy-cfg
          mountPath: /usr/local/etc/haproxy
      volumes:
        - name: haproxy-cfg
          configMap:
            name: haproxy-auth-gateway-haproxy-cfg
        - name: iss-cert
          configMap:
            name: haproxy-auth-gateway-iss-cert
