gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: sisox
  labels:
    app: gateway
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
