gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: sisox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "http"
spec:
  tls:
    - hosts:
      - sisox.site
      secretName: api-tls-secret
  rules:
  - host: api.sisox.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gateway
            port:
              number: 80
